--- a/pokeberg/src/components/Header/Header.scss
+++ b/pokeberg/src/components/Header/Header.scss
@@ -1,7 +1,53 @@
-@media (min-width: 1281px) {
+@media (min-width: 320px) {
   .header {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    background-color: brown;
+    padding: 2%;
+
+    h1 {
+      color: white;
+      text-align: center;
+    }
+
+    .navbar {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+
+      .elements {
+        display: flex;
+        justify-content: space-between;
+        list-style-type: none;
+        margin: 10px;
+
+        a {
+          text-decoration: none;
+          font-weight: bolder;
+          color: white;
+          font-size: 20px;
+          padding: 10px;
+
+          &:hover {
+            text-decoration: none;
+            font-weight: bolder;
+            color: white;
+            font-size: 20px;
+            background-color: rgb(165, 66, 66);
+            border-radius: 3px;
+          }
+        }
+      }
+    }
+    .trigger {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 1281px) {
+  .header {
     justify-content: space-around;
     background-color: brown;
     padding: 2%;
@@ -16,10 +62,7 @@
       align-items: center;
 
       .elements {
-        display: flex;
-        justify-content: space-between;
-        list-style-type: none;
-        margin: 10px;
+        display: none;
 
         li {
           margin: 1px;
@@ -28,51 +71,28 @@
             text-decoration: none;
             font-weight: bolder;
             color: white;
-            font-size: 20px;
-
-            &:hover {
-              text-decoration: none;
-              font-weight: bolder;
-              color: white;
-              font-size: 20px;
-              background-color: rgb(165, 66, 66);
-              border-radius: 3px;
-            }
+            font-size: 16px;
+            padding: 0px;
+            margin-left: 1px;
           }
         }
       }
-    }
-  }
-}
 
-@media (min-width: 320px) {
-  .header {
-    justify-content: space-around;
-    background-color: brown;
-    padding: 2%;
-    h1 {
-      color: white;
-      text-align: center;
-    }
-
-    .navbar {
-      display: flex;
-      align-items: center;
-      flex-direction: row;
-
-      .elements {
-        list-style-type: none;
-        margin: 10px;
+      .is-open {
         display: flex;
-
-        a {
-          text-decoration: none;
-          font-weight: bolder;
-          color: white;
-          font-size: 20px;
-          padding: 10px;
-        }
+        flex-direction: row;
       }
     }
+    .trigger {
+      display: flex;
+      align-items: center;
+      font-weight: bolder;
+      color: white;
+    }
+  }
+
+  .is-open-header {
+    display: flex;
+    flex-direction: column;
   }
 }
