--- a/pokeberg/src/pages/Home.scss
+++ b/pokeberg/src/pages/Home.scss
@@ -18,7 +18,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px;
+    text-align: center;
 
     p {
       font-size: 20px;
